force-app/main/default/objects/How_to_Article__kav/fields/Enter_Giveaway__c.field-meta.xml
<CustomField>
    <fullName>Enter_Giveaway__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to enter the contact into the giveaway contest</inlineHelpText>
    <label>Enter Giveaway</label>
    <type>Checkbox</type>
</CustomField>