force-app/main/default/objects/How_to_Article__kav/fields/Related_Articles__c.field-meta.xml
<CustomField>
    <fullName>Related_Articles__c</fullName>
    <label>Related Articles</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>