force-app/main/default/objects/How_to_Article__kav/fields/Suggesting_Account__c.field-meta.xml
<CustomField>
    <fullName>Suggesting_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggesting Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>How to Articles</relationshipLabel>
    <relationshipName>How_to_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>