force-app/main/default/objects/How_to_Article__kav/fields/Suggesting_Contact__c.field-meta.xml
<CustomField>
    <fullName>Suggesting_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Suggesting Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>How to Articles</relationshipLabel>
    <relationshipName>How_to_Articles</relationshipName>
    <type>Lookup</type>
</CustomField>